# genai-mlops

./: .env.example  .gitignore  CLAUDE.md  RESUME.md  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
mlflow/: Dockerfile
n8n-data/workflows/: ollama-webhook.json  openai-compat.json  prompt-crud.json  prompt-eval.json  prompt-ollama.json
scripts/: init-secrets.sh  seed_prompts.py
