[project]
name = "genai-mlops"
version = "0.2.0"
description = "GenAI MLOps stack — n8n + MLflow local platform"
requires-python = ">=3.10"
dependencies = ["mlflow>=3.1"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-xvs"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (formatter handles it)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
